@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: http.test,v 1.33.4.15 2009/11/19 16:51:27 dgp Exp $
+# RCS: @(#) $Id: http.test,v 1.33.4.16 2010/10/28 16:40:58 dgp Exp $
 
 package require tcltest 2
 namespace import -force ::tcltest::*
@@ -523,7 +523,7 @@ test http-4.15 {http::Event} -body {
     http::status $token
     # error codes vary among platforms.
 } -cleanup {
-    http::cleanup $token
+    catch {http::cleanup $token}
 } -returnCodes 1 -match glob -result "couldn't open socket*"
 
 test http-5.1 {http::formatQuery} {
